[gd_scene load_steps=8 format=2]

[ext_resource path="res://games/Ooks3/gerrymander.gd" type="Script" id=1]
[ext_resource path="res://mainmenu/art/font/font_kenpixel_high.tres" type="DynamicFont" id=2]
[ext_resource path="res://games/Ooks3/gerrymander36.png" type="Texture" id=3]
[ext_resource path="res://mainmenu/art/font/font_kenpixel_blocks.tres" type="DynamicFont" id=4]
[ext_resource path="res://shared/menu_pause/PauseMenu.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://mainmenu/art/font/kenpixel/high.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[node name="gerrymander" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="UI" instance=ExtResource( 5 )]
margin_left = 19.0
margin_top = 33.0
margin_right = 186.0
margin_bottom = 253.0
help_title = "How to Gerrymander"
help_body = "The goal is to make Purple win each vote by placing districts that have more purple voters (boxes) than green voters. A district with a majority Purple will vote entirely for Purple; any Green votes will count as Purple votes. This is real.
Districts cannot overlap.
A district must have at least one voter.
A district with more voters is worth more."

[node name="background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="background"]
margin_left = -10.0
margin_top = -6.0
margin_right = 655.0
margin_bottom = 381.0
color = Color( 0.0901961, 0.0666667, 0.101961, 1 )

[node name="successLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 243.0
margin_top = 50.0
margin_right = 490.0
margin_bottom = 104.0
custom_fonts/normal_font = ExtResource( 4 )
text = "success"

[node name="failLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 280.0
margin_top = 50.0
margin_right = 490.0
margin_bottom = 104.0
custom_fonts/normal_font = ExtResource( 4 )
text = "fail"

[node name="titles" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel2" type="RichTextLabel" parent="titles"]
margin_left = 233.0
margin_top = 6.0
margin_right = 491.0
margin_bottom = 60.0
custom_fonts/normal_font = SubResource( 2 )
text = "Every Vote Counts"

[node name="RichTextLabel3" type="RichTextLabel" parent="titles"]
margin_left = 244.0
margin_top = 32.0
margin_right = 491.0
margin_bottom = 86.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "Make [color=#bf3fb3]Purple[/color] Win"
text = "Make Purple Win"

[node name="Sprite" type="Sprite" parent="titles"]
position = Vector2( 208, 32 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="titles"]
position = Vector2( 444, 32 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 3 )

[node name="counts" type="Node2D" parent="."]
visible = false
position = Vector2( 544, 56 )

[node name="RichTextLabel" type="RichTextLabel" parent="counts"]
margin_right = 110.0
margin_bottom = 33.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Districts"

[node name="ColorRect" type="ColorRect" parent="counts"]
margin_left = -3.0
margin_top = 26.0
margin_right = 94.0
margin_bottom = 30.0

[node name="districtcount1" type="RichTextLabel" parent="counts"]
margin_left = -1.0
margin_top = 30.0
margin_right = 109.0
margin_bottom = 61.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "1: "
text = "1: "

[node name="districtcount2" type="RichTextLabel" parent="counts"]
margin_left = -5.0
margin_top = 54.0
margin_right = 105.0
margin_bottom = 85.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "2: "
text = "2: "

[node name="districtcount3" type="RichTextLabel" parent="counts"]
margin_left = -5.0
margin_top = 82.0
margin_right = 105.0
margin_bottom = 113.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "3: "
text = "3: "

[node name="districtcount4" type="RichTextLabel" parent="counts"]
margin_left = -5.0
margin_top = 110.0
margin_right = 105.0
margin_bottom = 141.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "4: "
text = "4: "

[node name="districtcount5" type="RichTextLabel" parent="counts"]
margin_left = -5.0
margin_top = 135.0
margin_right = 105.0
margin_bottom = 166.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "5: "
text = "5: "

[node name="districtcount6" type="RichTextLabel" parent="counts"]
margin_left = -5.0
margin_top = 161.0
margin_right = 105.0
margin_bottom = 192.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "6: "
text = "6: "

[node name="ColorRect2" type="ColorRect" parent="counts"]
margin_left = -4.0
margin_top = 190.0
margin_right = 93.0
margin_bottom = 194.0

[node name="purplecount" type="RichTextLabel" parent="counts"]
margin_left = 15.0
margin_top = 195.0
margin_right = 104.0
margin_bottom = 226.0
custom_colors/default_color = Color( 0.74902, 0.247059, 0.701961, 1 )
custom_fonts/normal_font = ExtResource( 2 )
text = "0"

[node name="greencount" type="RichTextLabel" parent="counts"]
margin_left = 15.0
margin_top = 219.0
margin_right = 104.0
margin_bottom = 250.0
custom_colors/default_color = Color( 0.513726, 0.878431, 0.298039, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_text = "0"
text = "0"
